--- a/branches/limehd.gingerbread/res/xml/lime_number_symbol_shift.xml
+++ b/branches/limehd.gingerbread/res/xml/lime_number_symbol_shift.xml
@@ -82,13 +82,13 @@
 
 
 	<Row android:rowEdgeFlags="bottom">
-		<Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done" android:isModifier="true"
+		<Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:isModifier="true"
 			  	android:keyWidth="15%p" android:keyEdgeFlags="left" />
 		<Key android:codes="-9" 
 				android:keyIcon="@drawable/sw" android:isModifier="true" 
 				android:keyWidth="10%p" 
 				android:iconPreview="@drawable/sw_l"/>
-		<Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime" android:isModifier="true"
+		<Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime"
 				android:keyWidth="15%p" android:isRepeatable="true" />
 		<Key android:codes="60" android:keyLabel="&lt;" android:keyWidth="10%p" />
 		<Key android:codes="62" android:keyLabel="&gt;" 
