--- a/res/xml/lime_dayi_sym.xml
+++ b/res/xml/lime_dayi_sym.xml
@@ -82,13 +82,13 @@
 
 
 	<Row android:rowEdgeFlags="bottom">
-		<Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done" android:isModifier="true"
+		<Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:isModifier="true"
 			android:keyWidth="15%p" android:keyEdgeFlags="left" />
 		<Key android:codes="-9" 
 				android:keyIcon="@drawable/sw" android:isModifier="true" 
 				android:keyWidth="10%p" 
 				android:iconPreview="@drawable/sw_l"/>
-		<Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime" android:isModifier="true"
+		<Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime"
 			android:keyWidth="30%p" android:isRepeatable="true" />
 		<Key android:codes="44" android:iconPreview="@drawable/dayi_comma_l" android:keyIcon="@drawable/dayi_comma" android:keyWidth="10%p" />
 		<Key android:codes="46" android:iconPreview="@drawable/dayi_dot_l" android:keyIcon="@drawable/dayi_dot" 
