--- a/res/values-xlarge/dimens.xml
+++ b/res/values-xlarge/dimens.xml
@@ -31,4 +31,6 @@
     <dimen name="label_text_size">30dip</dimen>
     <dimen name="composing_text_size">24sp</dimen>
     <dimen name="notice_text_size">20sp</dimen>
+    <dimen name="keyboard_vertical_correction">-0.05in</dimen>
+ 	<dimen name="mini_keyboard_vertical_correction">-0.05in</dimen>
 </resources>
