--- a/res/values-land/dimens.xml
+++ b/res/values-land/dimens.xml
@@ -20,6 +20,8 @@
 
 <resources>
     <dimen name="key_height">36dip</dimen>
-    <dimen name="candidate_font_height">32sp</dimen>
-    <dimen name="candidate_vertical_padding">6sp</dimen>
+    <dimen name="candidate_stripe_height">32sp</dimen>
+    <dimen name="candidate_font_size">28sp</dimen>
+    <dimen name="candidate_number_font_size">14sp</dimen>
+    <dimen name="candidate_vertical_padding">4sp</dimen>
 </resources>
