--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,6 +19,7 @@
 -->
 <resources>
     <color name="candidate_normal">#FF000000</color>
+    <color name="candidate_inverted">#FFFFFFFF</color>
     <color name="candidate_dictionary">#FF101010</color>
     <color name="candidate_recommended">#FFE35900</color>
     <color name="candidate_other">#FF101010</color>
