--- a/branches/limehd.gingerbread/res/layout/candidates.xml
+++ b/branches/limehd.gingerbread/res/layout/candidates.xml
@@ -22,9 +22,9 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/keyboard_suggest_strip"
-        >
+        android:layout_height="wrap_content">
+      <!--   android:background="@drawable/keyboard_suggest_strip" -->
+        
 
    <!--  <LinearLayout
             android:id="@+id/candidate_left_parent"
@@ -51,11 +51,11 @@
 		    class="net.toload.main.hd.candidate.CandidateView"
 	        android:id="@+id/candidates"
 	        android:layout_width="wrap_content"
-	        android:layout_height="38dp"
+	        android:layout_height="@dimen/candidate_stripe_height"
 	        android:layout_weight="1"
 			/>
 
-<!--     <LinearLayout
+    <!--  <LinearLayout
             android:id="@+id/candidate_right_parent"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
@@ -71,10 +71,10 @@
             android:id="@+id/candidate_right"
             android:background="@drawable/ic_suggest_scroll_background"
             android:src="@drawable/ic_suggest_strip_scroll_right_arrow" 
-            android:layout_width="36dp"
+            android:layout_width="18dp"
             android:layout_height="fill_parent"
             android:clickable="true"
             />
-    </LinearLayout>       -->  
+    </LinearLayout>        -->
     
 </net.toload.main.hd.candidate.CandidateViewContainer>
