--- a/branches/limehd.gingerbread/res/values-xlarge/dimens.xml
+++ b/branches/limehd.gingerbread/res/values-xlarge/dimens.xml
@@ -23,8 +23,9 @@
     <dimen name="key_height">84dip</dimen>
     <dimen name="key_height_2">84dip</dimen>
     <dimen name="spacebar_vertical_correction">4dip</dimen>
-    <dimen name="candidate_font_height">42sp</dimen>
-    <dimen name="candidate_number_font_height">21sp</dimen>
+    <dimen name="candidate_stripe_height">40sp</dimen>
+    <dimen name="candidate_font_size">42sp</dimen>
+    <dimen name="candidate_number_font_size">21sp</dimen>
     <dimen name="candidate_vertical_padding">8sp</dimen>
     <dimen name="keyboard_bottom_padding">0.06in</dimen>
     <dimen name="key_text_size">36dip</dimen>
