--- a/branches/limehd.gingerbread/res/values/dimens.xml
+++ b/branches/limehd.gingerbread/res/values/dimens.xml
@@ -19,16 +19,15 @@
 -->
 <resources>
     <dimen name="max_height_for_fullscreen">2.5in</dimen>
-    <dimen name="phone_key_height">48dip</dimen>
-    <dimen name="key_height">54dip</dimen>
-    <dimen name="key_height_2">40dip</dimen>
+    <dimen name="key_height">45dip</dimen>
     <dimen name="spacebar_vertical_correction">4dip</dimen>
-    <dimen name="candidate_font_height">32sp</dimen>
-    <dimen name="candidate_number_font_height">16sp</dimen>
-    <dimen name="candidate_vertical_padding">6sp</dimen>
+    <dimen name="candidate_stripe_height">32sp</dimen>
+    <dimen name="candidate_font_size">28sp</dimen>
+    <dimen name="candidate_number_font_size">14sp</dimen>
+    <dimen name="candidate_vertical_padding">4sp</dimen>
     <dimen name="keyboard_bottom_padding">0.06in</dimen>
-    <dimen name="key_text_size">22dip</dimen>
-    <dimen name="label_text_size">16dip</dimen>
+    <dimen name="key_text_size">22sp</dimen>
+    <dimen name="label_text_size">16sp</dimen>
     <dimen name="composing_text_size">18sp</dimen>
     <dimen name="notice_text_size">18sp</dimen>
   	<dimen name="key_hysteresis_distance">0.05in</dimen>
