--- a/branches/limehd.gingerbread/res/xml/cphone.xml
+++ b/branches/limehd.gingerbread/res/xml/cphone.xml
@@ -34,7 +34,7 @@
         <Key android:codes="49" android:iconPreview="@drawable/phone_1_l" android:keyIcon="@drawable/phone_1"/>
         <Key android:codes="50" android:iconPreview="@drawable/phone_2_l" android:keyIcon="@drawable/phone_2"/>
         <Key android:codes="51" android:iconPreview="@drawable/phone_3_l" android:keyIcon="@drawable/phone_3"/>
-        <Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" android:isModifier="true"  android:keyEdgeFlags="right" android:isRepeatable="true"/>
+        <Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:isModifier="true"  android:keyEdgeFlags="right" android:isRepeatable="true"/>
     </Row>
     
     <Row>
@@ -46,20 +46,20 @@
     </Row>
     
     <Row>
-        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift" android:isModifier="true" 
+        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift" android:iconPreview="@drawable/sym_keyboard_feedback_shift"  android:isModifier="true" 
                 android:isSticky="true" android:keyEdgeFlags="left"/>
         <Key android:codes="55" android:iconPreview="@drawable/phone_7_l" android:keyIcon="@drawable/phone_7"/>
         <Key android:codes="56" android:iconPreview="@drawable/phone_8_l" android:keyIcon="@drawable/phone_8"/>
         <Key android:codes="57" android:iconPreview="@drawable/phone_9_l" android:keyIcon="@drawable/phone_9"/>
-        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime" android:isRepeatable="true" android:keyEdgeFlags="right"/>
+        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime" android:iconPreview="@drawable/sym_keyboard_feedback_space" android:isRepeatable="true" android:keyEdgeFlags="right"/>
     </Row>
     
     <Row android:rowEdgeFlags="bottom">
-        <Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:isModifier="true" android:keyEdgeFlags="left"/>
+        <Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:iconPreview="@drawable/sym_keyboard_feedback_done" android:isModifier="true" android:keyEdgeFlags="left"/>
         <Key android:codes="40" android:iconPreview="@drawable/phone_left_l" android:keyIcon="@drawable/phone_left"/>
         <Key android:codes="48" android:iconPreview="@drawable/phone_0_l" android:keyIcon="@drawable/phone_0"/>
         <Key android:codes="44" android:iconPreview="@drawable/phone_right_l" android:keyIcon="@drawable/phone_right"/>
-        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:isModifier="true"  android:keyEdgeFlags="right"/>
+        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true"  android:keyEdgeFlags="right"/>
     </Row>
     
     
