--- a/branches/limehd.gingerbread/res/xml/lime_english.xml
+++ b/branches/limehd.gingerbread/res/xml/lime_english.xml
@@ -29,29 +29,29 @@
         <Key android:codes="113" android:keyLabel="q" android:keyEdgeFlags="left"/>
         <Key android:codes="119" android:keyLabel="w"/>
         <Key android:codes="101" android:keyLabel="e"
-                android:popupKeyboard="@xml/popup_template"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="@string/alternates_for_e"
         />
         <Key android:codes="114" android:keyLabel="r"
-                android:popupKeyboard="@xml/popup_template"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="@string/alternates_for_r"/>
         <Key android:codes="116" android:keyLabel="t"
-                android:popupKeyboard="@xml/popup_template"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="@string/alternates_for_t"/>
         <Key android:codes="121" android:keyLabel="y"
-                android:popupKeyboard="@xml/popup_template"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="@string/alternates_for_y"
         />
         <Key android:codes="117" android:keyLabel="u"
-                android:popupKeyboard="@xml/popup_template"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="@string/alternates_for_u"
         />
         <Key android:codes="105" android:keyLabel="i"
-                android:popupKeyboard="@xml/popup_template"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="@string/alternates_for_i"
         />
         <Key android:codes="111" android:keyLabel="o"
-                android:popupKeyboard="@xml/popup_template"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="@string/alternates_for_o"
         />
         <Key android:codes="112" android:keyLabel="p" android:keyEdgeFlags="right"/>
@@ -59,121 +59,116 @@
     
     <Row>
         <Key android:codes="97" android:keyLabel="a" android:horizontalGap="5%p" 
-                android:popupKeyboard="@xml/popup_template"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="@string/alternates_for_a"
                 android:keyEdgeFlags="left"/>
         <Key android:codes="115" android:keyLabel="s"
-                android:popupKeyboard="@xml/popup_template"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="@string/alternates_for_s"
         />
         <Key android:codes="100" android:keyLabel="d"
-                android:popupKeyboard="@xml/popup_template"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="@string/alternates_for_d"/>
         <Key android:codes="102" android:keyLabel="f"/>
         <Key android:codes="103" android:keyLabel="g"
-                android:popupKeyboard="@xml/popup_template"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="@string/alternates_for_g"/>
         />
         <Key android:codes="104" android:keyLabel="h"/>
         <Key android:codes="106" android:keyLabel="j"/>
         <Key android:codes="107" android:keyLabel="k"/>
         <Key android:codes="108" android:keyLabel="l" 
-                android:popupKeyboard="@xml/popup_template"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="@string/alternates_for_l"
                 android:keyEdgeFlags="right"/>
     </Row>
     
     <Row>
-        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift" 
+        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift" android:iconPreview="@drawable/sym_keyboard_feedback_shift" 
                 android:keyWidth="15%p" android:isModifier="true"
-                android:iconPreview="@drawable/sym_keyboard_feedback_shift"
                 android:isSticky="true"/>
         <Key android:codes="122" android:keyLabel="z"
-                android:popupKeyboard="@xml/popup_template"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="@string/alternates_for_z"/>
         <Key android:codes="120" android:keyLabel="x"/>
         <Key android:codes="99" android:keyLabel="c"
-                android:popupKeyboard="@xml/popup_template"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="@string/alternates_for_c"
         />
         <Key android:codes="118" android:keyLabel="v"/>
         <Key android:codes="98" android:keyLabel="b"/>
         <Key android:codes="110" android:keyLabel="n"
-                android:popupKeyboard="@xml/popup_template"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="@string/alternates_for_n"
         />
         <Key android:codes="109" android:keyLabel="m"/>
-        <Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" android:isModifier="true"
+        <Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:isModifier="true"
                 android:keyWidth="15%p" android:keyEdgeFlags="right"
-                android:iconPreview="@drawable/sym_keyboard_feedback_delete"
                 android:isRepeatable="true"/>
     </Row>
 
     <Row android:keyboardMode="@+id/mode_normal" android:rowEdgeFlags="bottom">
-    	<Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
+    	<Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:iconPreview="@drawable/sym_keyboard_feedback_done" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:isModifier="true" android:keyWidth="10%p" android:iconPreview="@drawable/sw_l"/>
         <Key android:codes="-2"  android:keyLabel="@string/label_symbol_key" android:isModifier="true" android:keyWidth="10%p" />
         <Key android:keyLabel="," android:keyWidth="10%p" />
         <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space"
                 android:iconPreview="@drawable/sym_keyboard_feedback_space"
                 android:keyWidth="30%p" android:isRepeatable="true"/>
-        <Key android:codes="46" android:keyLabel="." android:popupKeyboard="@xml/popup_punctuation" 
+        <Key android:codes="46" android:keyLabel="." android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_punctuation" 
                 android:keyWidth="10%p"/>
-        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:isModifier="true"
-                android:iconPreview="@drawable/sym_keyboard_feedback_return"
+        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true"
                 android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
 
     <Row android:keyboardMode="@+id/mode_url" android:rowEdgeFlags="bottom">
-        <Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
+        <Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:iconPreview="@drawable/sym_keyboard_feedback_done" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:isModifier="true" android:keyWidth="10%p" android:iconPreview="@drawable/sw_l"/>
         <Key android:codes="-2"  android:keyLabel="@string/label_symbol_key" android:isModifier="true" android:keyWidth="10%p" />
         <Key android:keyLabel="@string/popular_domain_0"
                 android:keyOutputText="@string/popular_domain_0"
-                android:popupKeyboard="@xml/popup_domains"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_domains"
                 android:keyWidth="15%p"/>
         <Key android:keyLabel="/" android:keyWidth="10%p"/>
         <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space"
                 android:iconPreview="@drawable/sym_keyboard_feedback_space"
                 android:keyWidth="15%p" android:isRepeatable="true"/>
-        <Key android:keyLabel="." android:popupKeyboard="@xml/popup_punctuation"
+        <Key android:keyLabel="." android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_punctuation"
                 android:keyWidth="10%p"/>
-        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:isModifier="true"
-                android:iconPreview="@drawable/sym_keyboard_feedback_return"
+        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true"
                 android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
 
     <Row android:keyboardMode="@+id/mode_email" android:rowEdgeFlags="bottom">
-    	<Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
+    	<Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:iconPreview="@drawable/sym_keyboard_feedback_done" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:isModifier="true" android:keyWidth="10%p" android:iconPreview="@drawable/sw_l"/>
         <Key android:codes="-2"  android:keyLabel="@string/label_symbol_key" android:isModifier="true" android:keyWidth="10%p" />
         <Key android:keyLabel="\@" android:keyWidth="10%p"/>
         <Key android:keyLabel="@string/popular_domain_0"
                 android:keyOutputText="@string/popular_domain_0"
-                android:popupKeyboard="@xml/popup_domains"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_domains"
                 android:keyWidth="15%p"/>
         <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space"
                 android:iconPreview="@drawable/sym_keyboard_feedback_space"
                 android:keyWidth="15%p" android:isRepeatable="true"/>
-        <Key android:keyLabel="." android:popupKeyboard="@xml/popup_punctuation"
+        <Key android:keyLabel="." android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_punctuation"
                 android:keyWidth="10%p"/>
-        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:isModifier="true"
-                android:iconPreview="@drawable/sym_keyboard_feedback_return"
+        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true"
                 android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
 
     <Row android:keyboardMode="@+id/mode_im" android:rowEdgeFlags="bottom">
-    	<Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
+    	<Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:iconPreview="@drawable/sym_keyboard_feedback_done" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:isModifier="true" android:keyWidth="10%p" android:iconPreview="@drawable/sw_l"/>
         <Key android:codes="-2"  android:keyLabel="@string/label_symbol_key" android:isModifier="true" android:keyWidth="15%p"/>
         <Key android:keyLabel="," android:keyWidth="10%p"/>
         <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space"
                 android:iconPreview="@drawable/sym_keyboard_feedback_space"
                 android:keyWidth="25%p" android:isRepeatable="true"/>
-        <Key android:codes="46" android:keyLabel="." android:popupKeyboard="@xml/popup_punctuation" 
+        <Key android:codes="46" android:keyLabel="." android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_punctuation" 
                 android:keyWidth="10%p"/>
         <Key android:keyLabel=":-)" android:keyOutputText=":-) "
-                android:popupKeyboard="@xml/popup_smileys"
+                android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_smileys"
                 android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
 </Keyboard>
