--- a/branches/limehd.gingerbread/res/xml/lime_phonetic.xml
+++ b/branches/limehd.gingerbread/res/xml/lime_phonetic.xml
@@ -77,19 +77,19 @@
         <Key android:codes="109" android:iconPreview="@drawable/phonetic_m_s_l" android:keyIcon="@drawable/phonetic_m_s"/>
         <Key android:codes="44" android:iconPreview="@drawable/phonetic_comma_l"  android:keyIcon="@drawable/phonetic_comma"/>
         <Key android:codes="46" android:iconPreview="@drawable/phonetic_dot_l" 
-        		android:popupKeyboard="@xml/popup_c_punctuation" android:keyIcon="@drawable/phonetic_dot"/>
+        	 android:popupKeyboard="@xml/popup_c_punctuation" android:keyIcon="@drawable/phonetic_dot"/>
         <Key android:codes="47" android:iconPreview="@drawable/phonetic_slash_l" android:keyIcon="@drawable/phonetic_slash"/>
     </Row>
     
     <Row android:rowEdgeFlags="bottom">
-        <Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:isModifier="true"  android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
+        <Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:iconPreview="@drawable/sym_keyboard_feedback_done" android:isModifier="true"  android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
         <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift"
 			android:keyWidth="15%p" android:isModifier="true" android:isSticky="true" />
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:isModifier="true"  android:iconPreview="@drawable/sw_l"/>     
-        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime"  android:keyWidth="20%p" android:isRepeatable="true"/>
+        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime" android:iconPreview="@drawable/sym_keyboard_feedback_space"  android:keyWidth="20%p" android:isRepeatable="true"/>
         <Key android:codes="45" android:iconPreview="@drawable/phonetic_dash_l" android:keyIcon="@drawable/phonetic_dash"/>
-        <Key android:codes="-5" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:keyWidth="15%p" android:keyIcon="@drawable/sym_keyboard_delete" android:isModifier="true" android:isRepeatable="true"/>
-        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
+        <Key android:codes="-5" android:keyWidth="15%p" android:keyIcon="@drawable/sym_keyboard_delete" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:isModifier="true" android:isRepeatable="true"/>
+        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
     
 </Keyboard>
