--- a/branches/limehd.gingerbread/res/xml/lime_wb.xml
+++ b/branches/limehd.gingerbread/res/xml/lime_wb.xml
@@ -55,7 +55,7 @@
     </Row>
     
     <Row>
-        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift" 
+        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift" android:iconPreview="@drawable/sym_keyboard_feedback_shift" 
                 android:keyWidth="15%p" android:isModifier="true"
                 android:isSticky="true" android:keyEdgeFlags="left"/>
         <Key android:codes="122" android:iconPreview="@drawable/cj_z_s_l" android:keyIcon="@drawable/cj_z_s"/>
@@ -65,22 +65,22 @@
         <Key android:codes="98" android:iconPreview="@drawable/cj_b_s_l" android:keyIcon="@drawable/cj_b_s"/>
         <Key android:codes="110" android:iconPreview="@drawable/cj_n_s_l" android:keyIcon="@drawable/cj_n_s"/>
         <Key android:codes="109" android:iconPreview="@drawable/cj_m_s_l" android:keyIcon="@drawable/cj_m_s"/>
-        <Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" android:isModifier="true" 
+        <Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:isModifier="true" 
                 android:keyWidth="15%p" android:keyEdgeFlags="right"
                 android:isRepeatable="true"/>
     </Row>
 
     <Row android:rowEdgeFlags="bottom">
-        <Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
+        <Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:iconPreview="@drawable/sym_keyboard_feedback_done" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:isModifier="true" android:keyWidth="15%p" android:iconPreview="@drawable/sw_l"/>
         <Key android:codes="44" android:keyLabel="," android:keyWidth="10%p"/>
-        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime"  android:keyWidth="25%p" android:isRepeatable="true"/>
+        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime" android:iconPreview="@drawable/sym_keyboard_feedback_space"  android:keyWidth="25%p" android:isRepeatable="true"/>
         <Key android:codes="46" 
         		android:keyLabel="."
-				android:popupKeyboard="@xml/popup_c_punctuation"   
+				android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_c_punctuation"   
         		android:keyWidth="10%p"/>
         <Key android:codes="-2" android:keyIcon="@drawable/number" android:isModifier="true" android:iconPreview="@drawable/number_l"/>
-        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
+        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
     
 </Keyboard>
