--- a/branches/limehd.gingerbread/res/xml/lime_phonetic.xml
+++ b/branches/limehd.gingerbread/res/xml/lime_phonetic.xml
@@ -29,56 +29,56 @@
     >
 
     <Row>
-        <Key android:codes="49" android:iconPreview="@drawable/phonetic_1_l" android:keyIcon="@drawable/phonetic_1" android:keyEdgeFlags="left"/>
-        <Key android:codes="50" android:iconPreview="@drawable/phonetic_2_l" android:keyIcon="@drawable/phonetic_2" />
-        <Key android:codes="51" android:iconPreview="@drawable/phonetic_3_l" android:keyIcon="@drawable/phonetic_3" />
-        <Key android:codes="52" android:iconPreview="@drawable/phonetic_4_l" android:keyIcon="@drawable/phonetic_4" />
-        <Key android:codes="53" android:iconPreview="@drawable/phonetic_5_l" android:keyIcon="@drawable/phonetic_5" />
-        <Key android:codes="54" android:iconPreview="@drawable/phonetic_6_l" android:keyIcon="@drawable/phonetic_6" />
-        <Key android:codes="55" android:iconPreview="@drawable/phonetic_7_l" android:keyIcon="@drawable/phonetic_7" />
-        <Key android:codes="56" android:iconPreview="@drawable/phonetic_8_l" android:keyIcon="@drawable/phonetic_8" />
-        <Key android:codes="57" android:iconPreview="@drawable/phonetic_9_l" android:keyIcon="@drawable/phonetic_9" />
-        <Key android:codes="48" android:iconPreview="@drawable/phonetic_0_l" android:keyIcon="@drawable/phonetic_0"  android:keyEdgeFlags="right"/>
+        <Key android:codes="49" android:keyLabel="1\nㄅ" android:keyEdgeFlags="left"/>
+        <Key android:codes="50" android:keyLabel="2\nㄉ" />
+        <Key android:codes="51" android:keyLabel="3\nˇ" />
+        <Key android:codes="52" android:keyLabel="4\nˋ" />
+        <Key android:codes="53" android:keyLabel="5\nㄓ" />
+        <Key android:codes="54" android:keyLabel="6\nˊ" />
+        <Key android:codes="55" android:keyLabel="7\n˙" />
+        <Key android:codes="56" android:keyLabel="8\nㄚ" />
+        <Key android:codes="57" android:keyLabel="9\nㄞ" />
+        <Key android:codes="48" android:keyLabel="0\nㄢ"  android:keyEdgeFlags="right"/>
     </Row>
     
      <Row>
-        <Key android:codes="113" android:iconPreview="@drawable/phonetic_q_s_l" android:keyIcon="@drawable/phonetic_q_s" android:keyEdgeFlags="left"/>
-        <Key android:codes="119" android:iconPreview="@drawable/phonetic_w_s_l" android:keyIcon="@drawable/phonetic_w_s"/>
-        <Key android:codes="101" android:iconPreview="@drawable/phonetic_e_s_l" android:keyIcon="@drawable/phonetic_e_s"/>
-        <Key android:codes="114" android:iconPreview="@drawable/phonetic_r_s_l" android:keyIcon="@drawable/phonetic_r_s"/>
-        <Key android:codes="116" android:iconPreview="@drawable/phonetic_t_s_l" android:keyIcon="@drawable/phonetic_t_s"/>
-        <Key android:codes="121" android:iconPreview="@drawable/phonetic_y_s_l" android:keyIcon="@drawable/phonetic_y_s"/>
-        <Key android:codes="117" android:iconPreview="@drawable/phonetic_u_s_l" android:keyIcon="@drawable/phonetic_u_s"/>
-        <Key android:codes="105" android:iconPreview="@drawable/phonetic_i_s_l" android:keyIcon="@drawable/phonetic_i_s"/>
-        <Key android:codes="111" android:iconPreview="@drawable/phonetic_o_s_l" android:keyIcon="@drawable/phonetic_o_s"/>
-        <Key android:codes="112" android:iconPreview="@drawable/phonetic_p_s_l" android:keyIcon="@drawable/phonetic_p_s" android:keyEdgeFlags="right"/>
+        <Key android:codes="113" android:keyLabel="q\nㄆ" android:keyEdgeFlags="left"/>
+        <Key android:codes="119" android:keyLabel="w\nㄊ" />
+        <Key android:codes="101" android:keyLabel="e\nㄍ" />
+        <Key android:codes="114" android:keyLabel="r\nㄐ" />
+        <Key android:codes="116" android:keyLabel="t\nㄔ" />
+        <Key android:codes="121" android:keyLabel="y\nㄗ" />
+        <Key android:codes="117" android:keyLabel="u\n一" />
+        <Key android:codes="105" android:keyLabel="i\nㄛ" />
+        <Key android:codes="111" android:keyLabel="o\nㄟ" />
+        <Key android:codes="112" android:keyLabel="p\nㄣ" android:keyEdgeFlags="right"/>
     </Row>
     
     <Row>
-        <Key android:codes="97" android:iconPreview="@drawable/phonetic_a_s_l" android:keyIcon="@drawable/phonetic_a_s" android:keyEdgeFlags="left"/>
-        <Key android:codes="115" android:iconPreview="@drawable/phonetic_s_s_l" android:keyIcon="@drawable/phonetic_s_s"/>
-        <Key android:codes="100" android:iconPreview="@drawable/phonetic_d_s_l" android:keyIcon="@drawable/phonetic_d_s"/>
-        <Key android:codes="102" android:iconPreview="@drawable/phonetic_f_s_l" android:keyIcon="@drawable/phonetic_f_s"/>
-        <Key android:codes="103" android:iconPreview="@drawable/phonetic_g_s_l" android:keyIcon="@drawable/phonetic_g_s"/>
-        <Key android:codes="104" android:iconPreview="@drawable/phonetic_h_s_l" android:keyIcon="@drawable/phonetic_h_s"/>
-        <Key android:codes="106" android:iconPreview="@drawable/phonetic_j_s_l" android:keyIcon="@drawable/phonetic_j_s"/>
-        <Key android:codes="107" android:iconPreview="@drawable/phonetic_k_s_l" android:keyIcon="@drawable/phonetic_k_s"/>
-        <Key android:codes="108" android:iconPreview="@drawable/phonetic_l_s_l" android:keyIcon="@drawable/phonetic_l_s"/>
-        <Key android:codes="59" android:iconPreview="@drawable/phonetic_semicolon_l" android:keyIcon="@drawable/phonetic_semicolon"/> android:keyEdgeFlags="right"/>
+        <Key android:codes="97" android:keyLabel="a\nㄇ" android:keyEdgeFlags="left"/>
+        <Key android:codes="115" android:keyLabel="s\nㄋ"/>
+        <Key android:codes="100" android:keyLabel="d\nㄎ"/>
+        <Key android:codes="102" android:keyLabel="f\nㄑ"/>
+        <Key android:codes="103" android:keyLabel="g\nㄕ"/>
+        <Key android:codes="104" android:keyLabel="h\nㄘ"/>
+        <Key android:codes="106" android:keyLabel="j\nㄨ"/>
+        <Key android:codes="107" android:keyLabel="k\nㄜ"/>
+        <Key android:codes="108" android:keyLabel="l\nㄠ"/>
+        <Key android:codes="59" android:keyLabel=";\nㄤ" android:keyEdgeFlags="right"/>
     </Row>
     
     <Row>
-        <Key android:codes="122" android:iconPreview="@drawable/phonetic_z_s_l" android:keyIcon="@drawable/phonetic_z_s" android:keyEdgeFlags="left"/>
-        <Key android:codes="120" android:iconPreview="@drawable/phonetic_x_s_l" android:keyIcon="@drawable/phonetic_x_s"/>
-        <Key android:codes="99" android:iconPreview="@drawable/phonetic_c_s_l" android:keyIcon="@drawable/phonetic_c_s"/>
-        <Key android:codes="118" android:iconPreview="@drawable/phonetic_v_s_l" android:keyIcon="@drawable/phonetic_v_s"/>
-        <Key android:codes="98" android:iconPreview="@drawable/phonetic_b_s_l" android:keyIcon="@drawable/phonetic_b_s"/>
-        <Key android:codes="110" android:iconPreview="@drawable/phonetic_n_s_l" android:keyIcon="@drawable/phonetic_n_s"/>
-        <Key android:codes="109" android:iconPreview="@drawable/phonetic_m_s_l" android:keyIcon="@drawable/phonetic_m_s"/>
-        <Key android:codes="44" android:iconPreview="@drawable/phonetic_comma_l"  android:keyIcon="@drawable/phonetic_comma"/>
-        <Key android:codes="46" android:iconPreview="@drawable/phonetic_dot_l" 
-        	 android:popupKeyboard="@xml/popup_c_punctuation" android:keyIcon="@drawable/phonetic_dot"/>
-        <Key android:codes="47" android:iconPreview="@drawable/phonetic_slash_l" android:keyIcon="@drawable/phonetic_slash"/>
+        <Key android:codes="122" android:keyLabel="z\nㄈ" android:keyEdgeFlags="left"/>
+        <Key android:codes="120" android:keyLabel="x\nㄌ" />
+        <Key android:codes="99" android:keyLabel="c\nㄏ" />
+        <Key android:codes="118" android:keyLabel="v\nㄒ" />
+        <Key android:codes="98" android:keyLabel="b\nㄖ" />
+        <Key android:codes="110" android:keyLabel="n\nㄙ" />
+        <Key android:codes="109" android:keyLabel="m\nㄩ" />
+        <Key android:codes="44" android:keyLabel=",\nㄝ" />
+        <Key android:codes="46" android:keyLabel=".\nㄡ" android:iconPreview="@drawable/hint_popup" 
+        	 android:popupKeyboard="@xml/popup_c_punctuation" />
+        <Key android:codes="47" android:keyLabel="/\nㄥ" android:keyEdgeFlags="right"/>
     </Row>
     
     <Row android:rowEdgeFlags="bottom">
@@ -87,7 +87,7 @@
 			android:keyWidth="15%p" android:isModifier="true" android:isSticky="true" />
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:isModifier="true"  android:iconPreview="@drawable/sw_l"/>     
         <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime" android:iconPreview="@drawable/sym_keyboard_feedback_space"  android:keyWidth="20%p" android:isRepeatable="true"/>
-        <Key android:codes="45" android:iconPreview="@drawable/phonetic_dash_l" android:keyIcon="@drawable/phonetic_dash"/>
+        <Key android:codes="45" android:keyLabel="-\nㄦ"/>
         <Key android:codes="-5" android:keyWidth="15%p" android:keyIcon="@drawable/sym_keyboard_delete" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:isModifier="true" android:isRepeatable="true"/>
         <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
