1. Bug fixed on hint popup icon when keyIcon is present. 2. Extend hint_popup drawable in attribute for display hint (...) on keys with popup keyboard defined. 3. Remove all hint_popup icon settings in xml. 4. Finish the phonetic_shift label and sublabel xml revision

--- a/branches/limehd.gingerbread/res/values/attrs.xml
+++ b/branches/limehd.gingerbread/res/values/attrs.xml
@@ -58,6 +58,9 @@
 
         <!-- Layout resource for popup keyboards. -->
         <attr name="popupLayout" format="reference" />
+        
+          <!-- popup hint icon. -->
+        <attr name="popupHint" format="reference" />
 
         <attr name="shadowColor" format="color" />
         <attr name="shadowRadius" format="float" />
