--- a/branches/limehd.gingerbread/res/values/styles.xml
+++ b/branches/limehd.gingerbread/res/values/styles.xml
@@ -28,6 +28,7 @@
         <item name="subLabelTextSize">@dimen/sub_label_text_size</item>
         <item name="smallLabelTextSize">@dimen/small_label_text_size</item>
         <item name="popupLayout">@layout/keyboard_popup</item>
+        <item name="popupHint">@drawable/hint_popup</item>
         <item name="keyHysteresisDistance">@dimen/key_hysteresis_distance</item>
         <item name="verticalCorrection">@dimen/keyboard_vertical_correction</item>
         <item name="shadowColor">#BB000000</item>
