--- a/branches/limehd.gingerbread/res/xml/lime_dayi.xml
+++ b/branches/limehd.gingerbread/res/xml/lime_dayi.xml
@@ -97,7 +97,7 @@
 		<Key android:codes="44" android:keyLabel="," android:keyWidth="10%p" />
 		<Key android:codes="46" 
 				android:keyLabel="."
-				android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_c_punctuation"   
+				 android:popupKeyboard="@xml/popup_c_punctuation"   
 				android:keyWidth="10%p" />
 		<Key android:codes="47" android:keyLabel="/" android:keyWidth="10%p" />
 		<Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true"
