--- a/branches/limehd.gingerbread/res/xml/lime_dayi_sym_shift.xml
+++ b/branches/limehd.gingerbread/res/xml/lime_dayi_sym_shift.xml
@@ -93,7 +93,7 @@
 		<Key android:codes="60" android:keyLabel="&lt;" android:keyWidth="10%p" />
 		<Key android:codes="62" android:keyLabel="&gt;" android:keyWidth="10%p" />
 		<Key android:codes="63" android:keyLabel="\?"
-								android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_punctuation"  
+								 android:popupKeyboard="@xml/popup_punctuation"  
 								android:keyWidth="10%p" />
 		<Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true"
 			android:keyWidth="15%p" android:keyEdgeFlags="right" />
