--- a/branches/limehd.gingerbread/res/xml/lime_phonetic_shift.xml
+++ b/branches/limehd.gingerbread/res/xml/lime_phonetic_shift.xml
@@ -31,60 +31,56 @@
 
     
     <Row>
-        <Key android:codes="64" android:keyLabel="\@"
-			android:keyEdgeFlags="left" />
-		<Key android:codes="35" android:keyLabel="\#" />
-		<Key android:codes="36" android:keyLabel="$" />
-		<Key android:codes="37" android:keyLabel="%" />
-		<Key android:codes="38" android:keyLabel="&amp;" />
-		<Key android:codes="42" android:keyLabel="*" />
-		<Key android:codes="33" android:keyLabel="!" />
-		<Key android:codes="47" android:keyLabel="/" />
-		<Key android:codes="40" android:keyLabel="(" />
-		<Key android:codes="41" android:keyLabel=")" android:keyEdgeFlags="right" />
+        <Key android:codes="64" android:keyLabel="\@\nㄅ" android:keyEdgeFlags="left" />
+		<Key android:codes="35" android:keyLabel="\#\nㄉ" />
+		<Key android:codes="36" android:keyLabel="$\nˇ" />
+		<Key android:codes="37" android:keyLabel="%\nˋ" />
+		<Key android:codes="38" android:keyLabel="&amp;\nㄓ" />
+		<Key android:codes="42" android:keyLabel="*\nˊ" />
+		<Key android:codes="33" android:keyLabel="!\n˙" />
+		<Key android:codes="47" android:keyLabel="/\nㄚ" />
+		<Key android:codes="40" android:keyLabel="(\nㄞ" />
+		<Key android:codes="41" android:keyLabel=")\nㄢ" android:keyEdgeFlags="right" />
     </Row>
-
+    <Row>
+        <Key android:codes="81" android:keyLabel="q\nㄆ" android:keyEdgeFlags="left"/>
+        <Key android:codes="87" android:keyLabel="w\nㄊ" />
+        <Key android:codes="69" android:keyLabel="e\nㄍ" />
+        <Key android:codes="82" android:keyLabel="r\nㄐ" />
+        <Key android:codes="84" android:keyLabel="t\nㄔ" />
+        <Key android:codes="89" android:keyLabel="y\nㄗ" />
+        <Key android:codes="85" android:keyLabel="u\n一" />
+        <Key android:codes="73" android:keyLabel="i\nㄛ" />
+        <Key android:codes="79" android:keyLabel="o\nㄟ" />
+        <Key android:codes="80" android:keyLabel="p\nㄣ" android:keyEdgeFlags="right"/>
+    </Row>
+    
      <Row>
-        <Key android:codes="81" android:iconPreview="@drawable/phonetic_q_u_l" android:keyIcon="@drawable/phonetic_q_u" android:keyEdgeFlags="left"/>
-        <Key android:codes="87" android:iconPreview="@drawable/phonetic_w_u_l" android:keyIcon="@drawable/phonetic_w_u"/>
-        <Key android:codes="69" android:iconPreview="@drawable/phonetic_e_u_l" android:keyIcon="@drawable/phonetic_e_u"/>
-        <Key android:codes="82" android:iconPreview="@drawable/phonetic_r_u_l" android:keyIcon="@drawable/phonetic_r_u"/>
-        <Key android:codes="84" android:iconPreview="@drawable/phonetic_t_u_l" android:keyIcon="@drawable/phonetic_t_u"/>
-        <Key android:codes="89" android:iconPreview="@drawable/phonetic_y_u_l" android:keyIcon="@drawable/phonetic_y_u"/>
-        <Key android:codes="85" android:iconPreview="@drawable/phonetic_u_u_l" android:keyIcon="@drawable/phonetic_u_u"/>
-        <Key android:codes="73" android:iconPreview="@drawable/phonetic_i_u_l" android:keyIcon="@drawable/phonetic_i_u"/>
-        <Key android:codes="79" android:iconPreview="@drawable/phonetic_o_u_l" android:keyIcon="@drawable/phonetic_o_u"/>
-        <Key android:codes="80" android:iconPreview="@drawable/phonetic_p_u_l" android:keyIcon="@drawable/phonetic_p_u" android:keyEdgeFlags="right"/>
+        <Key android:codes="65" android:keyLabel="a\nㄇ" android:keyEdgeFlags="left"/>
+        <Key android:codes="83" android:keyLabel="s\nㄋ"/>
+        <Key android:codes="68" android:keyLabel="d\nㄎ"/>
+        <Key android:codes="70" android:keyLabel="f\nㄑ"/>
+        <Key android:codes="71" android:keyLabel="g\nㄕ"/>
+        <Key android:codes="72" android:keyLabel="h\nㄘ"/>
+        <Key android:codes="74" android:keyLabel="j\nㄨ"/>
+        <Key android:codes="75" android:keyLabel="k\nㄜ"/>
+        <Key android:codes="76" android:keyLabel="l\nㄠ"/>
+        <Key android:codes="58" android:keyLabel=";\nㄤ" android:keyEdgeFlags="right"/>
     </Row>
     
-    <Row>
-        <Key android:codes="65" android:iconPreview="@drawable/phonetic_a_u_l" android:keyIcon="@drawable/phonetic_a_u" android:keyEdgeFlags="left"/>
-        <Key android:codes="83" android:iconPreview="@drawable/phonetic_u_u_l" android:keyIcon="@drawable/phonetic_u_u"/>
-        <Key android:codes="68" android:iconPreview="@drawable/phonetic_d_u_l" android:keyIcon="@drawable/phonetic_d_u"/>
-        <Key android:codes="70" android:iconPreview="@drawable/phonetic_f_u_l" android:keyIcon="@drawable/phonetic_f_u"/>
-        <Key android:codes="71" android:iconPreview="@drawable/phonetic_g_u_l" android:keyIcon="@drawable/phonetic_g_u"/>
-        <Key android:codes="72" android:iconPreview="@drawable/phonetic_h_u_l" android:keyIcon="@drawable/phonetic_h_u"/>
-        <Key android:codes="74" android:iconPreview="@drawable/phonetic_j_u_l" android:keyIcon="@drawable/phonetic_j_u"/>
-        <Key android:codes="75" android:iconPreview="@drawable/phonetic_k_u_l" android:keyIcon="@drawable/phonetic_k_u"/>
-        <Key android:codes="76" android:iconPreview="@drawable/phonetic_l_u_l" android:keyIcon="@drawable/phonetic_l_u"/>
-        <Key android:codes="58" android:keyLabel=":" android:keyEdgeFlags="right"/>
-    </Row>
-    
-
-    
-    <Row>
-        <Key android:codes="90" android:iconPreview="@drawable/phonetic_z_u_l" android:keyIcon="@drawable/phonetic_z_u" android:keyEdgeFlags="left"/>
-        <Key android:codes="88" android:iconPreview="@drawable/phonetic_x_u_l" android:keyIcon="@drawable/phonetic_x_u"/>
-        <Key android:codes="67" android:iconPreview="@drawable/phonetic_c_u_l" android:keyIcon="@drawable/phonetic_c_u"/>
-        <Key android:codes="86" android:iconPreview="@drawable/phonetic_v_u_l" android:keyIcon="@drawable/phonetic_v_u"/>
-        <Key android:codes="66" android:iconPreview="@drawable/phonetic_b_u_l" android:keyIcon="@drawable/phonetic_b_u"/>
-        <Key android:codes="78" android:iconPreview="@drawable/phonetic_n_u_l" android:keyIcon="@drawable/phonetic_n_u"/>
-        <Key android:codes="77" android:iconPreview="@drawable/phonetic_m_u_l" android:keyIcon="@drawable/phonetic_m_u"/>
-        <Key android:codes="60" android:keyLabel="&lt;" android:keyWidth="10%p" />
-		<Key android:codes="62" android:keyLabel="&gt;"
-								android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_punctuation"  android:keyWidth="10%p" />
-		<Key android:codes="63" android:keyLabel="\?" android:keyWidth="10%p" android:keyEdgeFlags="right"/>
-    </Row>
+   <Row>
+        <Key android:codes="90" android:keyLabel="z\nㄈ" android:keyEdgeFlags="left"/>
+        <Key android:codes="88" android:keyLabel="x\nㄌ" />
+        <Key android:codes="67" android:keyLabel="c\nㄏ" />
+        <Key android:codes="86" android:keyLabel="v\nㄒ" />
+        <Key android:codes="66" android:keyLabel="b\nㄖ" />
+        <Key android:codes="78" android:keyLabel="n\nㄙ" />
+        <Key android:codes="77" android:keyLabel="m\nㄩ" />
+        <Key android:codes="60" android:keyLabel=",\nㄝ" />
+        <Key android:codes="62" android:keyLabel=".\nㄡ"   
+        	 android:popupKeyboard="@xml/popup_c_punctuation" />
+        <Key android:codes="63" android:keyLabel="/\nㄥ" android:keyEdgeFlags="right"/>
+    </Row>    
     
     <Row android:rowEdgeFlags="bottom">
         <Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:iconPreview="@drawable/sym_keyboard_feedback_done" android:isModifier="true"  android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
@@ -92,7 +88,7 @@
 			android:keyWidth="15%p" android:isModifier="true" android:isSticky="true" />
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:isModifier="true"  android:iconPreview="@drawable/sw_l"/>
         <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime" android:iconPreview="@drawable/sym_keyboard_feedback_space"  android:keyWidth="20%p" android:isRepeatable="true"/>
-        <Key android:codes="61" android:keyLabel="="  />
+        <Key android:codes="61" android:keyLabel="=\nㄦ"/>
         <Key android:codes="-5" android:keyWidth="15%p" android:keyIcon="@drawable/sym_keyboard_delete" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:isModifier="true" android:isRepeatable="true"/>
         <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
