--- a/branches/limehd.gingerbread/res/xml/phone_simple.xml
+++ b/branches/limehd.gingerbread/res/xml/phone_simple.xml
@@ -58,7 +58,7 @@
         <Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:iconPreview="@drawable/sym_keyboard_feedback_done" android:isModifier="true" android:keyEdgeFlags="left"/>
         <Key android:codes="44" android:keyLabel=","/>
         <Key android:codes="48" android:keyLabel="0"/>
-        <Key android:codes="46" android:keyLabel="." android:keyIcon="@drawable/hint_popup" android:popupKeyboard="@xml/popup_c_punctuation" />
+        <Key android:codes="46" android:keyLabel="."  android:popupKeyboard="@xml/popup_c_punctuation" />
         <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true"  android:keyEdgeFlags="right"/>
     </Row>
     
