--- a/branches/limehd.gingerbread/res/layout/candidatepopup.xml
+++ b/branches/limehd.gingerbread/res/layout/candidatepopup.xml
@@ -17,28 +17,36 @@
 	android:layout_y="20px" -->
 
 
-	 <TextView
+<!--	 <TextView
 			android:id="@+id/ctxtView"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:text="hello,world!"
 			android:textSize="20sp">
 
-	</TextView>
-<!--    <net.toload.main.hd.candidate.CandidatePopupView
-	android:background="@android:color/transparent"
-		android:id="@+id/CandidatePopupView"
-        android:layout_alignParentBottom="true"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        /> -->
+	</TextView>-->
+    <net.toload.main.hd.keyboard.LIMEKeyboardBaseView
+            xmlns:limehd="http://schemas.android.com/apk/res/net.toload.main.hd"
+            android:id="@+id/CandidatePopupView"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/limekeyboard_transparent"
+            android:keyTextSize = "@dimen/key_text_size"
+        	android:labelTextSize = "@dimen/label_text_size"
+        	
+
+            limehd:keyBackground="@drawable/btn_keyboard_key_popup"
+            limehd:keyHysteresisDistance="0dip"
+            limehd:verticalCorrection="@dimen/mini_keyboard_vertical_correction"
+            />
 </ScrollView>
 
 <ImageButton android:id="@+id/closeButton"
 		android:background="@android:color/transparent"
 		android:src="@drawable/btn_close"
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_height="fill_parent"
 		android:layout_marginLeft="8dp"
 		android:clickable="true" android:layout_gravity="bottom|right"/>
 </LinearLayout>
