--- a/branches/limehd.gingerbread/res/layout/candidates.xml
+++ b/branches/limehd.gingerbread/res/layout/candidates.xml
@@ -61,11 +61,11 @@
             android:layout_height="fill_parent"
             android:clickable="true"
             android:orientation="horizontal">
-<!--         <ImageView
+         <ImageView
             android:src="@drawable/keyboard_suggest_strip_divider"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            /> -->
+            />
         
         <ImageButton
             android:id="@+id/candidate_right"
